--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Tauri&display=swap"
       rel="stylesheet"
     />
-    <title>Whatsapp Link Converter</title>
+    <title>Whatsapp Link Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
