add message box

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Tauri&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/099ac854b2.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Whatsapp Link Generator</title>
   </head>
   <body>
